--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -42,6 +42,10 @@
                <span class="text-gray-500 font-[400]"> Don't have an account ? </span>
                <a routerLink="/register" routerLinkActive="active" class="hover:underline font-[500] hover:cursor-pointer">Create a free account</a>
             </div>
+            <div class="flex w-full mt-6 justify-center lg:justify-start flex-row space-x-1">
+                <span class="text-gray-500 font-[400]"> Request Email Verification ? </span>
+                <a routerLink="/request-verication" routerLinkActive="active" class="hover:underline font-[500] hover:cursor-pointer">Request</a>
+             </div>
         </div>
     </form>
     
