--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
 <div class="flex flex-row min-h-full">
   <!-- Side Bar -->
   <section class="w-[25%] flex flex-col bg-white items-center pt-10">
+    <div class="font-semibold text-2xl text-vendblocblue mb-4">My Dashboard</div>
     <img
       src="../../../assets/dashboarduser.png"
       class="rounded-full w-[150px]"
@@ -17,7 +18,7 @@
      <app-side-menu-item menuName="Log Out"></app-side-menu-item>
     </div>
   </section>
-  <div class="w-full bg-[#F2F2F2] flex flex-col px-10 py-6">
+  <div class="w-full bg-[#F2F2F2] flex flex-col px-10 2xl:px-20 py-6">
    <ng-content></ng-content>
   </div>
 </div>
