--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 
+<ngx-spinner type="ball-spin-clockwise"></ngx-spinner>
 <router-outlet></router-outlet>
 
 <!-- <app-footer></app-footer> -->
