--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -68,11 +68,11 @@
 
   <!-- Content Div -->
   <div
-    class="flex px-1 lg:px-10 xl:px-10 w-full pt-4 space-x-5 lg:space-x-8 items-center md:items-start"
+    class="flex px-1 lg:px-10 xl:px-24 w-full pt-4 space-x-5 lg:space-x-8 items-center md:items-start"
   >
     <!-- Categories Div -->
     <div
-      class="hidden md:w-[25%] p-0 shadow-lg md:p-2 lg:p-4 h-fit md:flex md:flex-col bg-[#0f172a08] space-y-6"
+      class="hidden md:w-[25%] xl:w-[20%] p-0 shadow-lg md:p-2 lg:p-4 h-fit md:flex md:flex-col bg-[#0f172a08] space-y-6"
     >
       <!-- Search Div -->
       <div class="flex flex-col space-y-3">
@@ -107,7 +107,7 @@
         <span class="sm:mb-2 lg:mb-4">Food Categories</span>
         <div class="overflow-auto">
           @for( category of categories;track category.id){
-          
+          <app-side-menu-item (click)="categoryProducts(category.id)" menuName={{category.name}}></app-side-menu-item>
           }
         </div>
       </div>
@@ -116,7 +116,7 @@
     <div class="w-[95%] px-0 md:w-[45%]">
       <!-- List of Products -->
       <div class="px-0 sm:px-1 md:px-2 lg:px-6 2xl:px-10">
-        @for(product of products; track product.id){
+        @for(product of products; track product.productId){
         <div
           class="flex items-center justify-start md:justify-between space-x-0 sm:space-x-2 md:space-x-1 w-full border-b py-2 sm:py-1"
         >
@@ -127,13 +127,13 @@
             <img class="product_image" src="../../../assets/meal.png" alt="" />
             <!-- Info -->
             <div class="flex flex-col text-sm text-vendblocblue">
-              <span class="font-inter">{{ product.name }}</span>
+              <span class="font-inter">{{ product.product }}</span>
               <div
                 class="flex space-x-5 md:space-x-4 items-center justify-center"
               >
                 <span class="opacity-50 font-inter">Qty</span>
                 <span class="flex items-center space-x-1">
-                  <span (click)="updateProductQuantity(product.id, false)">
+                  <span (click)="updateProductQuantity(product.productId, false)">
                     <svg xmlns="http://www.w3.org/2000/svg" width="13" height="2" viewBox="0 0 13 2" fill="none">
                       <path d="M1 1H12.0194" stroke="#0F172A" stroke-width="1.57419" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
@@ -147,7 +147,7 @@
                       id=""
                   /></span>
 
-                  <span (click)="updateProductQuantity(product.id, true)">
+                  <span (click)="updateProductQuantity(product.productId, true)">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="13"
@@ -174,7 +174,7 @@
               </div>
               <div class="flex space-x-1">
                 <span class="opacity-50 font-inter">Price</span>
-                <span class="pl-2 sm:pl-0 opacity-70 font-inter">₦2500</span> 
+                <span class="pl-2 sm:pl-0 opacity-70 font-inter">₦{{product.salesPrice}}</span> 
                 <!-- {{ product.price }} -->
               </div>
             </div>
@@ -216,7 +216,7 @@
               />
               <!-- Info -->
               <div class="flex flex-col">
-                <strong>{{ cartItem.name }}</strong>
+                <strong>{{ cartItem.product }}</strong>
                 <div class="flex opacity-70 space-x-2">
                   <span>Qty</span> <span>- {{ cartItem.orderQuantity }} +</span>
                 </div>
@@ -224,7 +224,7 @@
             </div>
             <!-- Remove from Cart -->
             <div class="flex items-center w-[30%] space-x-2">
-              <span>{{ cartItem.price }}</span>
+              <span class="text-vendblocblue opacity-60">{{ cartItem.price }}</span>
               <span
                 (click)="removeFromCart(cartItem)"
                 class="flex items-center p-2 justify-center bg-[#E8E8EA] hover:cursor-pointer"
@@ -259,7 +259,7 @@
 
         <div>Total : {{ totalcost }}</div>
         <div class="form_div">
-          <button
+          <button (click)="checkout()"
             style="background-color: #0f172a"
             class="create_button flex justify-center p-3 space-x-4 text-white hover:shadow-lg duration-300"
             type="submit"
