--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -8,11 +8,11 @@
            
             <div class="form_div">
                 <label for="">Enter Your Email Address</label>
-                <input class="border p-3 rounded-md" placeholder="adazionp@gmail.com" formControlName="email" type="email" required>
+                <input required class="border p-3 rounded-md" placeholder="adazionp@gmail.com" formControlName="email" type="email" required>
             </div>
             <div class="form_div">
                 <label for="">Enter Password</label>
-                <input class="border p-3 rounded-md" placeholder="************" formControlName="password" type="password" required>
+                <input required class="border p-3 rounded-md" placeholder="************" formControlName="password" type="password" required>
             </div>
             <div class="w-full mt-4 justify-start flex-row space-x-3">
                 <input type="checkbox" name="" id="">
