--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,21 @@
-<div class="px-6 md:px-20 lg:px-24 pt-12 lg:pt-5">
+<div class="px-6 md:px-12 xl:px-24 pt-12 xl:pt-14 pb-10">
   <!-- Top Div -->
   <div class="flex flex-col-reverse md:flex-row">
 <!-- Wording DIV -->
-    <div class="flex flex-col md:w-2/3 lg:w-[60%] space-y-5 2xl:space-y-10">
-        <div class="flex flex-col text-[35px] md:text-[55px] xl:text-[65px]  font-bold">
+    <div class="w-full md:w-2/3 lg:w-[65%] 2xl:w-[50%] flex flex-col space-y-2 md:space-y-5 2xl:space-y-10">
+        <div class="flex flex-col text-[34px] md:text-[60px] lg:text-[65px] 2xl:text-[75px] font-bold mb-5 xl:mb-1">
             <span>Order Your <span class="text-[#B60803]">Favorite</span></span>
             <span class="-mt-3 md:-mt-6"> Meals here</span>
         </div>
-     <span class="font-normal text-[21px] text-[#4B5262]"
+     <span class="px-2 sm:px-0 text-left font-normal text-sm md:text-[21px] md:leading-9 md:text-h text-[#4B5262] w-full md:w-[95%] 2xl:w-[65%] font-inter pl-1 md:pl-2"
         >Start Ordering your tasty and favourite food. There you go, you just
         started an amazing delicious journey of non-ending taste</span
       >
-      <button
-        class="flex justify-center border space-x-2 bg-[#0F172A] w-full md:w-[55%] lg rounded-3xl py-4 md:py-3 px-1 text-white"
+      <div>
+        <button
+        class="flex justify-center space-x-2 bg-[#0F172A] w-full md:w-[55%] lg:w-[33%] lg rounded-3xl py-4 md:py-3 px-1 text-white mt-6 lg:mt-2"
       >
-        <span>Place an Order now</span>
+        <span>Place an Order Now</span>
         <svg
           width="24"
           height="24"
@@ -38,30 +39,27 @@
           />
         </svg>
       </button>
+      </div>
+     
     </div>
     <!-- Image Div -->
     <div>
-        
+        image will be here
     </div>
   </div>
 
   <!-- Bottom Divs -->
-  <div class="flex justify-between mt-10 xl:mt-8 font-semibold text-2xl text-[#1A1B1F]">
+  <div class="flex justify-between mt-16 md:mt-10 xl:mt-8 font-semibold text-base md:text-xl 2xl:text-2xl text-[#1A1B1F]">
     <span>Top Restaurants</span>
     <span>View All</span>
   </div>
   <!-- Restaurants -->
-  <div class="flex">
-    <div class="w-[200px] h-[192px] rounded-md shadow-xl mt-5">
-        <!-- Image -->
-        <div class="flex h-[60%]">
-            <img class="object-cover rounded-t-md" src="../../../assets/kjaro.png" alt="">
-        </div>
-        <!-- Info -->
-        <div class="flex flex-col text-[#0F172A] px-2 py-1">
-            <span class="text-base font-semibold ">Kilimanjaro</span>
-            <span class="text-sm opacity-50 font-normal">Operates within the Quick Service Restaurant</span>
-        </div>
+  <div class="flex mb-5">
+    <div class="overflow-x-auto flex">
+      @for (r of restaurants; track r.id) {
+        <app-restaurant-card store={{r.store}} outlet={{r.name}} ></app-restaurant-card>
+      }
     </div>
+    
   </div>
 </div>
