--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
-<ngx-spinner type="ball-spin-clockwise"></ngx-spinner>
+
 <router-outlet></router-outlet>
+<app-loading></app-loading>
 
 <!-- <app-footer></app-footer> -->
