--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -44,7 +44,7 @@
         <div class="overflow-x-auto flex py-2">
           @for( category of categories;track category.id){
           <div
-            (click)="categoryProducts(category.id)"
+            (click)="categoryProducts($event,category.id)"
             class="flex flex-col px-0.5 sm:px-2 lg:px-2"
           >
             <div
@@ -105,10 +105,10 @@
       </div>
       <div class="flex flex-col space-y-0">
         <span class="sm:mb-2 lg:mb-4">Food Categories</span>
-        <div class="overflow-auto">
-          @for( category of categories;track category.id){
-          <app-side-menu-item (click)="categoryProducts(category.id)" menuName={{category.name}}></app-side-menu-item>
-          }
+        <div class="overflow-auto" *ngFor="let category of categories">
+        
+          <app-side-menu-item  (click)="categoryProducts($event, category.id)" [menuName]="category.name"></app-side-menu-item>
+          
         </div>
       </div>
     </div>
@@ -126,10 +126,10 @@
           >
             <img class="product_image" src="../../../assets/meal.png" alt="" />
             <!-- Info -->
-            <div class="flex flex-col text-sm text-vendblocblue">
+            <div class="flex flex-col text-sm text-vendblocblue justify-start">
               <span class="font-inter">{{ product.product }}</span>
               <div
-                class="flex space-x-5 md:space-x-4 items-center justify-center"
+                class="flex space-x-5 md:space-x-4 items-center justify-start"
               >
                 <span class="opacity-50 font-inter">Qty</span>
                 <span class="flex items-center space-x-1">
