--- a/src/app/components/side-menu-item/side-menu-item.component.html
+++ b/src/app/components/side-menu-item/side-menu-item.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col sm:px-1 lg:px-2">
     <div class="category_item_div group">
       <span class="flex items-center group-hover:text-white">
-        <svg
+        <!-- <svg
           class="stroke-[#0F172A] group-hover:stroke-white"
           width="24"
           height="24"
@@ -16,7 +16,7 @@
             stroke-linecap="round"
             stroke-linejoin="round"
           />
-        </svg>
+        </svg> -->
         <a class="px-2 text-[#0F172A] group-hover:text-white" href=""
           >{{menuName}}</a
         >
