--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- Entire Div -->
-<div class="flex flex-row min-h-full">
+<div class="flex flex-row min-h-full pl-5 md:pl-12 xl:pl-24">
   <!-- Side Bar -->
   <section class="w-[25%] flex flex-col bg-white items-center pt-10">
     <div class="font-semibold text-2xl text-vendblocblue mb-4">My Dashboard</div>
@@ -18,7 +18,7 @@
      <app-side-menu-item menuName="Log Out"></app-side-menu-item>
     </div>
   </section>
-  <div class="w-full bg-[#F2F2F2] flex flex-col px-10 2xl:px-20 py-6">
+  <div class="w-full min-h-screen bg-[#F2F2F2] flex flex-col px-10 2xl:px-20 py-6">
    <ng-content></ng-content>
   </div>
 </div>
