--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="flex justify-between px-5 md:px-12 xl:px-24 py-[22px] border-b">
+<header class="flex justify-between px-5 md:px-12 xl:px-12 2xl:px-24 py-[22px] border-b">
   <!-- Logo -->
   <div>
     <svg
