--- a/src/app/components/restaurant-card/restaurant-card.component.html
+++ b/src/app/components/restaurant-card/restaurant-card.component.html
@@ -1,4 +1,4 @@
-<a href="/order">
+<a href="/order/{{outletId}}">
     <div class="w-[200px] h-[192px] 2xl:w-[220px] rounded-md shadow-xl my-5 2xl:mt-10 mr-8 2xl:mr-14">
         <!-- Image -->
         <div class="flex h-[60%]">
