--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <!-- Entire Div -->
-<div class="flex flex-row min-h-full pl-5 md:pl-12 xl:pl-24">
+<div class="flex flex-row min-h-full ">
   <!-- Side Bar -->
-  <section class="w-[25%] flex flex-col bg-white items-center pt-10">
+  <section class="w-[27%] border 2xl:px-24 flex flex-col bg-white items-center pt-10">
     <div class="font-semibold text-2xl text-vendblocblue mb-4">My Dashboard</div>
     <img
       src="../../../assets/dashboarduser.png"
@@ -12,7 +12,7 @@
       >Ugwumba Ogechi</span
     >
     <div class="flex flex-col w-[90%] mt-5">
-     <app-side-menu-item menuName="Personal Information"></app-side-menu-item>
+     <app-side-menu-item (click)="navigate('info')"  menuName="Personal Information"></app-side-menu-item>
      <app-side-menu-item menuName="My Order"></app-side-menu-item>
      <app-side-menu-item menuName="Change Password"></app-side-menu-item>
      <app-side-menu-item menuName="Log Out"></app-side-menu-item>
