--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -122,8 +122,25 @@
       </svg>
     </span>
     @if(isAuthenticated){
-    
-    <img src="../../../../assets/dashboarduser.png"  class="w-8 h-8 rounded-full object-cover cursor-pointer">
+      <div class="relative inline-block text-left">
+        <div>
+        <img (click)="toggleProfileDropdown()" src="../../../../assets/dashboarduser.png"  class="w-8 h-8 rounded-full object-cover cursor-pointer">
+      </div>
+        @if(profileDropDown){
+          <div class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+            <div class="py-1" role="none">
+              <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
+              <a href="/dashboard" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">Dashboard</a>
+              <!-- <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-1">Support</a>
+              <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-2">License</a> -->
+              <!-- <form method="POST" action="#" role="none">
+                <button type="submit" class="text-gray-700 block w-full px-4 py-2 text-left text-sm" role="menuitem" tabindex="-1" id="menu-item-3">Sign out</button>
+              </form> -->
+            </div>
+          </div>
+        }
+       
+      </div>
     } @else {
     <a class="hidden lg:block auth_button" routerLink="/register">SignUp</a>
     <a
