--- a/src/app/components/order/order.component.css
+++ b/src/app/components/order/order.component.css
@@ -4,7 +4,7 @@
 
 
 .category_item_div{
-    @apply flex items-center justify-between sm:px-1 lg:px-2 sm:py-3 lg:py-4 hover:bg-[#0F172A] hover:cursor-pointer hover:text-white;
+    @apply flex py-2 px-3 max-h-10 justify-between sm:px-1 lg:px-2 sm:py-3 lg:py-4 hover:cursor-pointer hover:text-white border border-vendblocblue hover:bg-[#0F172A] rounded-[20px];
 }
 
 .add_to_cart{   
