--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -40,24 +40,22 @@
         </div>
       </div>
       <div class="flex flex-col space-y-0">
-        <span class="font-bold mb-2">Food Categories</span>
+        <span class="font-bold mb-1">Food Categories</span>
         <div class="overflow-x-auto flex py-2">
           @for( category of categories;track category.id){
-          <div
-            (click)="categoryProducts($event,category.id)"
-            class="flex flex-col px-0.5 sm:px-2 lg:px-2"
-          >
+          <div class="flex flex-row my-3 mx-3">
             <div
-              class="category_item_div group border border-vendblocblue hover:bg-[#0F172A] rounded-[20px] py-2 mr-5 px-3"
+              (click)="categoryProducts($event, category.id)"
+              class="category_item_div group"
             >
-              <span class="flex items-center group-hover:text-white">
-                <a class="px-2 text-[#0F172A] group-hover:text-white" href="">{{
-                  category.name
-                }}</a>
-              </span>
-              <span class="text-[#0F172A] opacity-50 group-hover:text-white">{{
-                category.quantity
-              }}</span>
+              <span
+                class="flex whitespace-nowrap px-1 text-[#0F172A] group-hover:text-white"
+                href=""
+                >{{ category.name }}</span
+              >
+              <span class="text-[#0F172A] opacity-50 group-hover:text-white"
+                >{{ category.quantity }} 5</span
+              >
             </div>
           </div>
           }
@@ -106,9 +104,10 @@
       <div class="flex flex-col space-y-0">
         <span class="sm:mb-2 lg:mb-4">Food Categories</span>
         <div class="overflow-auto" *ngFor="let category of categories">
-        
-          <app-side-menu-item  (click)="categoryProducts($event, category.id)" [menuName]="category.name"></app-side-menu-item>
-          
+          <app-side-menu-item
+            (click)="categoryProducts($event, category.id)"
+            [menuName]="category.name"
+          ></app-side-menu-item>
         </div>
       </div>
     </div>
@@ -133,9 +132,23 @@
               >
                 <span class="opacity-50 font-inter">Qty</span>
                 <span class="flex items-center space-x-1">
-                  <span (click)="updateProductQuantity(product.productId, false)">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="13" height="2" viewBox="0 0 13 2" fill="none">
-                      <path d="M1 1H12.0194" stroke="#0F172A" stroke-width="1.57419" stroke-linecap="round" stroke-linejoin="round"/>
+                  <span
+                    (click)="updateProductQuantity(product.productId, false)"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="13"
+                      height="2"
+                      viewBox="0 0 13 2"
+                      fill="none"
+                    >
+                      <path
+                        d="M1 1H12.0194"
+                        stroke="#0F172A"
+                        stroke-width="1.57419"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
                     </svg>
                   </span>
                   <span
@@ -147,7 +160,9 @@
                       id=""
                   /></span>
 
-                  <span (click)="updateProductQuantity(product.productId, true)">
+                  <span
+                    (click)="updateProductQuantity(product.productId, true)"
+                  >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="13"
@@ -168,13 +183,16 @@
                         stroke-width="1.57419"
                         stroke-linecap="round"
                         stroke-linejoin="round"
-                      /></svg>
-                    </span>
+                      />
+                    </svg>
+                  </span>
                 </span>
               </div>
               <div class="flex space-x-1">
                 <span class="opacity-50 font-inter">Price</span>
-                <span class="pl-2 sm:pl-0 opacity-70 font-inter">₦{{product.salesPrice}}</span> 
+                <span class="pl-2 sm:pl-0 opacity-70 font-inter"
+                  >₦{{ product.salesPrice }}</span
+                >
                 <!-- {{ product.price }} -->
               </div>
             </div>
@@ -224,7 +242,9 @@
             </div>
             <!-- Remove from Cart -->
             <div class="flex items-center justify-between w-[30%] space-x-2">
-              <span class="text-vendblocblue opacity-60">{{ cartItem.price }}</span>
+              <span class="text-vendblocblue opacity-60">{{
+                cartItem.price
+              }}</span>
               <span
                 (click)="removeFromCart(cartItem)"
                 class="flex items-center p-2 justify-center bg-[#E8E8EA] hover:cursor-pointer"
@@ -259,7 +279,8 @@
 
         <div>Total : {{ totalcost }}</div>
         <div class="form_div">
-          <button (click)="checkout()"
+          <button
+            (click)="checkout()"
             style="background-color: #0f172a"
             class="create_button flex justify-center p-3 space-x-4 text-white hover:shadow-lg duration-300"
             type="submit"
