--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <!-- Top Div -->
   <div class="flex flex-col-reverse md:flex-row md:space-y-0">
 <!-- Wording DIV -->
-    <div class="mt-5 md:mt-0 w-full md:w-2/3 lg:w-[65%] 2xl:w-[50%] flex flex-col space-y-2 md:space-y-5 2xl:space-y-10">
+    <div class="mt-5 md:mt-0 w-full md:w-2/3 lg:w-[65%] 2xl:w-[60%] flex flex-col space-y-2 md:space-y-5 2xl:space-y-10">
         <div class="flex flex-col text-[34px] md:text-[60px] lg:text-[65px] 2xl:text-[75px] font-bold mb-5 xl:mb-1">
             <span>Order Your <span class="text-[#B60803]">Favorite</span></span>
             <span class="-mt-3 md:-mt-6"> Meals here</span>
@@ -43,11 +43,9 @@
      
     </div>
     <!-- Image Div -->
-    <div class="justify-center md:justify-start flex w-full md:w-1/3 lg:w-[35%] 2xl:w-[50%] md:items-center">
-      <div class="flex flex-col items-center lg:items-start justify-center xl:mt-24 rounded-tl-[100px] rounded-br-[100px] w-[85%] md:w-full xl:w-[70%] h-[250px] md:h-[300px] xl:h-[400px] shadow-mine bg-[url('/assets/landingimage.png')]
+    <div class="justify-center items-center md:justify-start flex w-full md:w-1/3 lg:w-[35%] 2xl:w-[50%] md:items-center mb-5 md:mb-0">
+      <div class="flex flex-col items-center lg:items-start justify-center xl:mt-24 rounded-tl-[100px] rounded-br-[100px] w-[65%] md:w-full xl:w-[70%] h-[250px] md:h-[300px] xl:h-[400px] shadow-mine bg-[url('/assets/landingimage.png')]
       bg-cover bg-no-repeat ">
-         <!-- <img src="../../../assets/landingimage.png" class="object-contain rounded-tl-[100px]" alt=""> -->
-        
       </div>
     </div>
     
