--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -11,21 +11,21 @@
     </div>
     
     <!-- Content Div -->
-    <div class="flex flex-col min-h-[45%] mt-8 w-full pt-2 px-3 py-6 rounded-md bg-white">
+    <div class="flex flex-col min-h-[45%] mt-8 bg-white">
         <span class="text_title">Personal Information</span>
         <div class="flex space-x-5 mt-5">
             <div class="flex flex-col space-y-4">
                 <span class="info_title">Name</span>
                 <span class="info_title">Email</span>
-                <span class="info_title">Phone</span>
-                <span class="info_title">Address</span>
+                <!-- <span class="info_title">Phone</span>
+                <span class="info_title">Address</span> -->
             </div>
 
             <div class="flex flex-col space-y-4">
                 <span class="info_title opacity-70">Ugwumba Ogechi Prisca</span>
                 <span class="info_title opacity-70">adazionp&#64;gmail.com</span>
-                <span class="info_title opacity-70">2348169289524</span>
-                <span class="info_title opacity-70">Robert Robertson, 1234 NW Bobcat Lane, St. Robert, MO 65584-5678</span>
+                <!-- <span class="info_title opacity-70">2348169289524</span>
+                <span class="info_title opacity-70">Robert Robertson, 1234 NW Bobcat Lane, St. Robert, MO 65584-5678</span> -->
             </div>
         </div>
     </div>
