Optimizations and Fixes

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="loginForm" (submit)="login()">
         <div class="flex flex-col w-full items-center">
             <div class="flex flex-col md:w-[100%] items-center">
-                <h1 class="font-bold text-3xl mb-4">LogIn to your Account</h1>
+                <h1 class="font-bold text-3xl mb-4">Log in to your Account</h1>
                 <span class="text-center text-gray-500">Sign in to your account and orders and payments seamlessly</span>
             </div>
            
