fixes and Optimization

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -8,7 +8,7 @@
            
             <div class="form_div">
                 <label for="">Enter Your Email Address</label>
-                <input required class="border p-3 rounded-md" placeholder="adazionp@gmail.com" formControlName="email" type="email" required>
+                <input required class="border p-3 rounded-md" placeholder="Input Your Email" formControlName="email" type="email" required>
             </div>
             <div class="form_div">
                 <label for="">Enter Password</label>
