--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="flex flex-col items-center md:flex-row justify-between px-2 sm:px-5 md:px-12 py-[22px] border bg-[#0F172A] fixed w-full bottom-0 m-0">
+<footer class="relative flex flex-col items-center md:flex-row justify-between px-2 sm:px-5 md:px-12 py-[22px] bg-[#0F172A] w-full bottom-0 m-0">
   <div>
     <svg xmlns="http://www.w3.org/2000/svg" width="134" height="34" viewBox="0 0 134 34" fill="none">
         <path d="M15.45 6.6499V2.3999H2.04999V31.5999H15.45V27.3499C12.705 27.3499 10.0724 26.2594 8.13143 24.3184C6.19043 22.3774 5.09999 19.7449 5.09999 16.9999C5.09999 14.2549 6.19043 11.6223 8.13143 9.68135C10.0724 7.74035 12.705 6.6499 15.45 6.6499Z" fill="#FAFAFA"/>
