--- a/src/app/components/my-orders/my-orders.component.html
+++ b/src/app/components/my-orders/my-orders.component.html
@@ -4,6 +4,7 @@
     
     <!-- Content Div -->
     <div class="flex flex-col min-h-[45%] mt-8 w-full bg-white">
+
         <table class="table-auto">
             <thead>
               <tr class="text-center bg-vendblocblue text-white">
@@ -16,18 +17,18 @@
               </tr>
             </thead>
             <tbody>
-              @for (order of orders; track order.id) {
-                <tr class="text-center border-b">
-                  <td class="py-3">{{order.id}}</td>
+                <tr *ngFor="let order of orders;let i = index;" class="text-center border-b">
+                  <td class="py-3">{{i+1}}</td>
                   <td class="py-3">{{order.formattedDate}}</td>
                   <td>{{order.deliveryMode}}</td>
                   <td>{{order.status}}</td>
                   <td>{{order.amount}}</td>
                   <td class="underline underline-offset-4 cursor-pointer">View Detail</td>
                 </tr>
-              }
             </tbody>
-          </table>
+        </table>
+        
+        
     </div>
 
 </app-dashboard>
