--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -8,6 +8,63 @@
     />
   </div>
 
+  @if(showModalCart){
+  <!-- Modal [ngClass]="showModalCart ? 'opacity-50' : 'hidden opacity-0'"-->
+  <div id="dialog" class="fixed left-0 top-0 bg-black bg-opacity-50 w-screen h-screen z-50">
+     <!-- Close Button -->
+     <div (click)="showmodal()"
+     class="group absolute top-16 right-2 flex items-center justify-center w-10 h-10 bg-gray-200 rounded-full md:bg-white md:top-4 hover:cursor-pointer hover:-translate-y-0.5 transition duration-150"
+   >
+     <svg
+       xmlns="http://www.w3.org/2000/svg"
+       class="w-6 h-6 text-black group-hover:text-gray-600"
+       viewBox="0 0 24 24"
+       stroke-width="1.5"
+       stroke="currentColor"
+       fill="none"
+       stroke-linecap="round"
+       stroke-linejoin="round"
+     >
+       <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+       <line x1="18" y1="6" x2="6" y2="18" />
+       <line x1="6" y1="6" x2="18" y2="18" />
+     </svg>
+   </div>
+    <div class="bg-white rounded-xl shadow-md p-4 mx-auto my-20 w-[90%] max-h-[80%] border">
+      <div class="flex items-center gap-5">
+        <div
+          class="m-0 md:flex-col shadow-lg w-full md:p-1 lg:p-3 xl:p-4 bg-[#0f172a08] space-y-6"
+        >
+          <div class="flex flex-col space-y-3">
+            <span class="font-bold">My Cart ({{ cartCount }})</span>
+            <!-- Cart list -->
+            <div class="flex max-h-[300px] flex-col overflow-auto">
+              @for(cartItem of cart; track cartItem.id){
+              <app-cart-item
+                (cartItemEmitted)="removeFromCart($event)"
+                [cartItem]="cartItem"
+              ></app-cart-item>
+              }
+            </div>
+
+            <div>Total : {{ totalcost }}</div>
+            <div class="form_div">
+              <button
+                (click)="checkout()"
+                style="background-color: #0f172a"
+                class="create_button flex justify-center p-3 space-x-4 text-white hover:shadow-lg duration-300"
+                type="submit"
+              >
+                <span>Checkout</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+}
+
   <!-- Mobile Div -->
   <div class="flex flex-col md:hidden pt-4">
     <div class="px-5 space-y-3">
@@ -53,9 +110,9 @@
                 href=""
                 >{{ category.name }}</span
               >
-              <span class="text-[#0F172A] opacity-50 group-hover:text-white"
-                >{{ category.quantity }}</span
-              >
+              <span class="text-[#0F172A] opacity-50 group-hover:text-white">{{
+                category.quantity
+              }}</span>
             </div>
           </div>
           }
@@ -75,7 +132,7 @@
       <!-- Search Div -->
       <div class="flex flex-col space-y-3">
         <span class="font-bold">Search Food</span>
-        <div class="flex items-center relative w-full">
+        <div class="flex items-center w-full">
           <input
             class="py-3 pl-12 px-1 rounded-lg w-full bg-[#7676801f] focus:outline-none"
             type="text"
@@ -222,61 +279,12 @@
         <!-- Cart list -->
         <div class="flex max-h-[300px] flex-col overflow-auto">
           @for(cartItem of cart; track cartItem.id){
-          <div
-            class="flex items-center justify-between space-x-2 w-full border-b py-1 my-1"
-          >
-            <!-- Cart Item -->
-            <div class="flex flex-row space-x-3 w-[70%]">
-              <img
-                class="product_image"
-                src="../../../assets/meal.png"
-                alt=""
-              />
-              <!-- Info -->
-              <div class="flex flex-col">
-                <strong>{{ cartItem.product }}</strong>
-                <div class="flex opacity-70 space-x-2">
-                  <span>Qty</span> <span>- {{ cartItem.orderQuantity }} +</span>
-                </div>
-              </div>
-            </div>
-            <!-- Remove from Cart -->
-            <div class="flex items-center justify-between w-[30%] space-x-2">
-              <span class="text-vendblocblue opacity-60">{{
-                cartItem.price
-              }}</span>
-              <span
-                (click)="removeFromCart(cartItem)"
-                class="flex items-center p-2 justify-center bg-[#E8E8EA] hover:cursor-pointer"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="18"
-                  height="18"
-                  viewBox="0 0 18 18"
-                  fill="none"
-                >
-                  <path
-                    d="M13.5 4.5L4.5 13.5"
-                    stroke="#0F172A"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M4.5 4.5L13.5 13.5"
-                    stroke="#0F172A"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-              </span>
-            </div>
-          </div>
+          <app-cart-item
+            (cartItemEmitted)="removeFromCart($event)"
+            [cartItem]="cartItem"
+          ></app-cart-item>
           }
         </div>
-
         <div>Total : {{ totalcost }}</div>
         <div class="form_div">
           <button
@@ -290,5 +298,25 @@
         </div>
       </div>
     </div>
+
+
+        <!-- Floating Cart -->
+        <div (click)="showmodal()" class="bg-[hsl(222,47%,11%)] fixed p-4 rounded-full right-[50px] bottom-10 z-50 hover:p-5 duration-100 shadow-2xl mb-12">
+          <!-- <div class="absolute bg-red-600 rounded-full bottom-6 px-0.5 right-1">2</div> -->
+          <svg  xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+            <g clip-path="url(#clip0_226_3727)">
+              <path d="M7.49984 18.3334C7.96007 18.3334 8.33317 17.9603 8.33317 17.5001C8.33317 17.0398 7.96007 16.6667 7.49984 16.6667C7.0396 16.6667 6.6665 17.0398 6.6665 17.5001C6.6665 17.9603 7.0396 18.3334 7.49984 18.3334Z" stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M16.6668 18.3334C17.1271 18.3334 17.5002 17.9603 17.5002 17.5001C17.5002 17.0398 17.1271 16.6667 16.6668 16.6667C16.2066 16.6667 15.8335 17.0398 15.8335 17.5001C15.8335 17.9603 16.2066 18.3334 16.6668 18.3334Z" stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M0.833496 0.833252H4.16683L6.40016 11.9916C6.47637 12.3752 6.68509 12.7199 6.98978 12.9652C7.29448 13.2104 7.67574 13.3407 8.06683 13.3333H16.1668C16.5579 13.3407 16.9392 13.2104 17.2439 12.9652C17.5486 12.7199 17.7573 12.3752 17.8335 11.9916L19.1668 4.99992H5.00016" stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <defs>
+              <clipPath id="clip0_226_3727">
+                <rect width="20" height="20" fill="white"/>
+              </clipPath>
+            </defs>
+          </svg>
+        </div>
+
+
   </div>
 </div>
