--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -5,15 +5,15 @@
         <h1 class="font-bold text-3xl mb-4">Create your Account</h1>
         <div class="form_div">
             <label for="">Enter Full Name</label>
-            <input class="border p-3 rounded-md" placeholder="Ugwumba ogechi" formControlName="name" type="text" required>
+            <input class="border p-3 rounded-md" placeholder="Full Name" formControlName="name" type="text" required>
         </div>
         <div class="form_div">
             <label for="">Enter Your Email Address</label>
-            <input class="border p-3 rounded-md" placeholder="adazionp@gmail.com" formControlName="email" type="email" required>
+            <input class="border p-3 rounded-md" placeholder="Email Address" formControlName="email" type="email" required>
         </div>
         <div class="form_div">
             <label for="">Enter Password</label>
-            <input class="border p-3 rounded-md" placeholder="************" formControlName="password" type="password" required>
+            <input class="border p-3 rounded-md" placeholder="********" formControlName="password" type="password" required>
         </div>
         <div class="w-full mt-4 justify-start flex-row space-x-3">
             <input type="checkbox" name="" id="">
