--- a/src/app/components/my-orders/my-orders.component.html
+++ b/src/app/components/my-orders/my-orders.component.html
@@ -10,7 +10,7 @@
               <tr class="text-center bg-vendblocblue text-white">
                 <th class="py-3">#</th>
                 <th>Date</th>
-                <th>Delivery Mode</th>
+                <th>Delivery</th>
                 <th>Status</th>
                 <th>Amount</th>
                 <th>Action</th>
