--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
+<div class="flex flex-col min-h-screen">
+
 <app-header></app-header>
 
-
-<router-outlet></router-outlet>
-<app-loading></app-loading>
+<div class="flex-1">
+    <router-outlet></router-outlet>
+    <app-loading></app-loading>
+</div>
 
 <app-footer></app-footer>
+</div>
