--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -4,39 +4,18 @@
     <span class="text-2xl text-vendblocblue font-bold opacity-75">VendBloc</span>
   </div>
   <!-- Links -->
-  <div class="hidden lg:flex lg:space-x-4 xl:space-x-8 items-center">
-    <a class="active_nav_link" href="#">Home</a>
-    <a class="nav_link" href="#">Order</a>
-    <!-- <a class="nav_link" href="#">Services</a>
-    <a class="nav_link" href="#">Contact</a>
-    <a class="nav_link" href="#">About Us</a> -->
+  <div class="flex-col space-y-3 md:flex-row space-x-2 md:space-x-6 xl:space-x-8 md:items-center">
+    <a class="active_nav_link" routerLink="/home" href="#">Home</a>
+    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
+    <!-- <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
+    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
+    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
+    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
+    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
+    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a> -->
   </div>
   <!-- auth buttons and cart -->
   <div class="flex items-center space-x-5">
-    <span class="hidden md:block">
-      <svg
-        width="28"
-        height="29"
-        viewBox="0 0 28 29"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M12.8333 22.6667C17.988 22.6667 22.1667 18.488 22.1667 13.3333C22.1667 8.17868 17.988 4 12.8333 4C7.67868 4 3.5 8.17868 3.5 13.3333C3.5 18.488 7.67868 22.6667 12.8333 22.6667Z"
-          stroke="#0F172A"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-        <path
-          d="M24.5 24.9998L19.425 19.9248"
-          stroke="#0F172A"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
-    </span>
     @if(isAuthenticated){
       <span class="block">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="17" viewBox="0 0 24 17" fill="none">
@@ -53,20 +32,11 @@
               <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
               <a routerLink="/dashboard" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">Dashboard</a>
             <a (click)="logout()" class="text-gray-700 block px-4 py-2 text-sm cursor-pointer hover:underline" role="menuitem" tabindex="-1" id="menu-item-1">Logout</a>
-             <!--    <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-2">License</a> -->
-              <!-- <form method="POST" action="#" role="none">
-                <button type="submit" class="text-gray-700 block w-full px-4 py-2 text-left text-sm" role="menuitem" tabindex="-1" id="menu-item-3">Sign out</button>
-              </form> -->
             </div>
           </div>
         }
        
       </div>
-      <!-- <a
-      class="hidden lg:block auth_button border-red-600 text-red-600"
-      routerLink="/login"
-      >Logout</a
-    > -->
     } @else {
     <a class="hidden lg:block auth_button border-gray-500" routerLink="/register">SignUp</a>
     <a
@@ -75,7 +45,7 @@
       >LogIn</a
     >
     }
-    <span class="lg:hidden"
+    <span class="md:hidden"
       ><svg
         width="32"
         height="32"
