--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -47,7 +47,9 @@
               }
             </div>
 
-            <div>Total : {{ totalcost }}</div>
+            <div> <span class="font-semibold">Total</span> : {{ totalcost }}</div>
+            <app-delivery-option uniqueId="mobile" (selectedDeliveryModeEmitter)="deliveryModeChanged($event)"></app-delivery-option>
+       
             <div class="form_div">
               <button
                 (click)="checkout()"
@@ -169,7 +171,7 @@
       </div>
     </div>
     <!-- Products Div -->
-    <div class="w-[95%] md:w-[45%] lg:w-[45%] 2xl:w-full">
+    <div class="w-[95%] md:w-[45%] lg:w-[45%] 2xl:w-full flex-auto">
       <!-- List of Products -->
       <div class="px-0 sm:px-1 md:px-2 lg:px-6 2xl:px-10">
         @for(product of products; track product.productId){
@@ -266,6 +268,16 @@
           </div>
         </div>
         }
+        @if(products.length === 0){
+          <div class="font-inter text-lg md:text-xl text-center">
+          @if(currentCategory === -1){
+            <div class="flex justify-center items-center"><span>Please select a category to see the products</span></div>
+          }
+          @else {
+            <div class="flex justify-center items-center"><span>There are no products in this current category</span></div>
+          }
+        </div>
+        }
       </div>
       <!-- Product item -->
     </div>
@@ -285,7 +297,8 @@
           ></app-cart-item>
           }
         </div>
-        <div>Total : {{ totalcost }}</div>
+        <div> <span class="font-semibold">Total</span> : {{ totalcost }}</div>
+        <app-delivery-option (selectedDeliveryModeEmitter)="deliveryModeChanged($event)"></app-delivery-option>
         <div class="form_div">
           <button
             (click)="checkout()"
