--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <!-- Entire Div -->
-<div class="flex flex-row min-h-full ">
+<div class="flex flex-row min-h-full">
   <!-- Side Bar -->
-  <section class="w-[27%] border 2xl:px-24 flex flex-col bg-white items-center pt-10">
+  <section class="w-[27%] 2xl:px-10 flex flex-col bg-white items-center pt-10">
     <div class="font-semibold text-sm lg:text-2xl text-vendblocblue mb-4">My Dashboard</div>
     <img
       src="../../../assets/dashboarduser.png"
