--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="md:mt-0 w-full md:w-2/3 lg:w-[60%] flex flex-col space-y-2 md:space-y-5 2xl:space-y-10">
         <div class="flex flex-col text-[34px] md:text-[60px] lg:text-[65px] 2xl:text-[75px] font-bold mb-5 xl:mb-1">
             <span>Order Your <span class="text-[#B60803]">Favorite</span></span>
-            <span class="-mt-3 md:-mt-6"> Meals here</span>
+            <span class="-mt-1 md:-mt-3"> Meals here</span>
         </div>
      <span class="px-2 sm:px-0 text-left font-normal text-sm md:text-[21px] md:leading-9 md:text-h text-[#4B5262] w-full md:w-[95%] 2xl:w-[65%] font-inter pl-1 md:pl-2"
         >Start Ordering your tasty and favourite food. There you go, you just
@@ -15,8 +15,8 @@
         <button
         class="flex justify-center space-x-2 bg-[#0F172A] w-full md:w-[55%] lg:w-[33%] lg rounded-3xl py-4 md:py-3 px-1 text-white mt-6 lg:mt-2"
       >
-        <span>Place an Order Now</span>
-        <svg
+        <span>Select a store below to order</span>
+        <!-- <svg
           width="24"
           height="24"
           viewBox="0 0 24 24"
@@ -37,7 +37,7 @@
             stroke-linecap="round"
             stroke-linejoin="round"
           />
-        </svg>
+        </svg> -->
       </button>
       </div>
      
@@ -54,7 +54,7 @@
   <!-- Bottom Divs -->
   <div class="flex justify-between mt-16 md:mt-10 xl:mt-8 font-semibold text-base md:text-xl 2xl:text-2xl text-[#1A1B1F]">
     <span>Top Restaurants</span>
-    <span>View All</span>
+    <span></span>
   </div>
   <!-- Restaurants -->
   <div class="flex mb-5">
