--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -4,24 +4,13 @@
     <span class="text-2xl text-vendblocblue font-bold opacity-75">VendBloc</span>
   </div>
   <!-- Links -->
-  <div class="flex-col space-y-3 md:flex-row space-x-2 md:space-x-6 xl:space-x-8 md:items-center">
+  <div class="flex-col justify-end space-y-3 md:flex-row space-x-2 md:space-x-6 xl:space-x-8 md:items-center">
     <a class="active_nav_link" routerLink="/home" href="#">Home</a>
     <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
-    <!-- <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
-    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
-    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
-    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
-    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
-    <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a> -->
   </div>
   <!-- auth buttons and cart -->
   <div class="flex items-center space-x-5">
     @if(isAuthenticated){
-      <span class="block">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="17" viewBox="0 0 24 17" fill="none">
-          <path d="M1 1H5L7.68 14.39C7.77144 14.8504 8.02191 15.264 8.38755 15.5583C8.75318 15.8526 9.2107 16.009 9.68 16H19.4C19.8693 16.009 20.3268 15.8526 20.6925 15.5583C21.0581 15.264 21.3086 14.8504 21.4 14.39L23 6H6" stroke="#0F172A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-      </span>
       <div class="relative inline-block text-left">
         <div>
         <img (click)="toggleProfileDropdown()" src="../../../../assets/dashboarduser.png"  class="w-8 h-8 rounded-full object-cover cursor-pointer">
@@ -45,7 +34,7 @@
       >LogIn</a
     >
     }
-    <span class="md:hidden"
+    <!-- <span class="md:hidden"
       ><svg
         width="32"
         height="32"
@@ -65,6 +54,6 @@
           </clipPath>
         </defs>
       </svg>
-    </span>
+    </span> -->
   </div>
 </header>
